--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@tailwindcss/postcss": "4.1.11",
 		"@tailwindcss/typography": "0.5.16",
 		"@types/node": "24",
+		"clean-css": "5.3.3",
 		"html-minifier-terser": "7.2.0",
 		"luxon": "3.7.1",
 		"markdown-it": "14.1.0",
