--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ public/sitemap*
 
 # HACK This is compiled and updated on Eleventy Server Init to get around
 # a weird string truncation bug with Inlining the CSS
-src/_includes/compiled.css
+src/assets/compiled.css
