--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
 		"build": "eleventy"
 	},
 	"dependencies": {
-		"@11ty/eleventy": "3.1.2"
+		"@11ty/eleventy": "4.0.0-alpha.4"
 	},
 	"devDependencies": {
 		"@11ty/eleventy-img": "^6",
 		"@11ty/eleventy-plugin-rss": "^2",
 		"@biomejs/biome": "^2",
-		"@tailwindcss/postcss": "4.1.11",
+		"@tailwindcss/postcss": "4.1.14",
 		"@types/node": "24",
 		"html-minifier-terser": "7.2.0",
-		"luxon": "3.7.1",
+		"luxon": "3.7.2",
 		"markdown-it": "14.1.0",
 		"postcss": "8.5.6",
-		"shiki": "3.9.2",
-		"tailwindcss": "4.1.11",
-		"typescript": "5.9.2"
+		"shiki": "3.13.0",
+		"tailwindcss": "4.1.14",
+		"typescript": "5.9.3"
 	}
 }
